<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.iceti.lobo</groupId>
	<artifactId>lobo01</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>lobo-01</name>
	<description>Lobo 01 fired</description>

	<modules>
		<module>lobo-domain</module>
		<module>lobo-web</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
			  	<groupId>junit</groupId>
			  	<artifactId>junit</artifactId>
			  	<version>4.11</version>
			  	<scope>test</scope>
			</dependency>
			<!-- Apache Commons Collections -->
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>1.4.4</version>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>1.1.1</version>
			</dependency>
			<!-- Misc -->
			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-lang3</artifactId>
			    <version>3.1</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>2.3</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>3.2.5.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>3.2.5.RELEASE</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-beans</artifactId>
			    <version>3.2.5.RELEASE</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-web</artifactId>
			    <version>3.2.5.RELEASE</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-webmvc</artifactId>
			    <version>3.2.5.RELEASE</version>
			</dependency>
		
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>3.2.5.RELEASE</version>
			</dependency>
			<!-- Spring Security -->  
			<dependency>  
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-core</artifactId>
			        <version>3.1.3.RELEASE</version>  
			</dependency>  
			<dependency>  
			    <groupId>org.springframework.security</groupId>
		            <artifactId>spring-security-web</artifactId>
			    <version>3.1.3.RELEASE</version>  
			</dependency>  
			<dependency>  
			    <groupId>org.springframework.security</groupId>
			    <artifactId>spring-security-config</artifactId>
			    <version>3.1.3.RELEASE</version>  
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-orm</artifactId>
			    <version>3.2.5.RELEASE</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework</groupId>
			    <artifactId>spring-test</artifactId>
			    <version>3.2.5.RELEASE</version>
			    <scope>test</scope>	
			</dependency>
<!--
			<dependency>
			    <groupId>org.springframework.webflow</groupId>
			    <artifactId>spring-webflow</artifactId>
			    <version>2.3.5.RELEASE</version>
			</dependency>
-->
<!--
			<dependency>
			    <groupId>ch.qos.logback</groupId>
			    <artifactId>logback-core</artifactId>
			    <version>1.0.13</version>
			</dependency>
			<dependency>
			    <groupId>ch.qos.logback</groupId>
			    <artifactId>logback-classic</artifactId>
			    <version>1.0.13</version>
			</dependency>
			<dependency>
			    <groupId>ch.qos.logback</groupId>
			    <artifactId>logback-examples</artifactId>
			    <version>1.0.13</version>
			</dependency>
-->
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>
			<dependency>
			    <groupId>org.slf4j</groupId>
			    <artifactId>slf4j-api</artifactId>
			    <version>1.7.5</version>
			</dependency>
			<dependency>
			    <groupId>org.hibernate</groupId>
			    <artifactId>hibernate-core</artifactId>
			    <version>4.2.7.Final</version>
			</dependency>
			<!-- Spring AOP dependency -->
			<dependency>
		    	        <groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>2.2</version>
			</dependency>
			<!-- MySQL database driver -->
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>5.1.26</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>1.3.174</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>15.0</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>1.5.4</version>
			</dependency>
			<dependency>
			   <groupId>org.aspectj</groupId>
			   <artifactId>aspectjweaver</artifactId>
			   <version>1.6.6</version>
			</dependency>
			<dependency>
			   <groupId>org.javassist</groupId>
			   <artifactId>javassist</artifactId>
			   <version>3.18.0-GA</version>
			</dependency>
			<dependency>
			    <groupId>org.codehaus.jackson</groupId>
			    <artifactId>jackson-core-asl</artifactId>
			    <version>1.9.13</version>
			</dependency>
			<dependency>
			    <groupId>org.codehaus.jackson</groupId>
			    <artifactId>jackson-mapper-asl</artifactId>
			    <version>1.9.13</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>
		</dependencies>

	</dependencyManagement>
	<!-- SCM -->
	<scm>
		<connection>scm:https://github.com/iceti/lobo01.git</connection>
		<developerConnection>scm:https://github.com/iceti/lobo01.git</developerConnection>
		<url>https://github.com/iceti/lobo01.git</url>
	</scm>
	<build>
		<plugins>
			<plugin>
			      <artifactId>maven-compiler-plugin</artifactId>
				<configuration>
				  <source>1.6</source>
				  <target>1.6</target>
				</configuration>
			    </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xmx1536m -XX:MaxPermSize=160M</argLine>
				</configuration>
			</plugin>
			<!-- Release PlugIn -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<tagBase>https://github.com/iceti/lobo01.git</tagBase>
					<preparationGoals>clean install</preparationGoals>
					<goals>clean deploy</goals>
					<updateBranchVersions>true</updateBranchVersions>
					<updateWorkingCopyVersions>true</updateWorkingCopyVersions>
					<autoVersionSubmodules>true</autoVersionSubmodules>
<!--
					<checkModificationExcludes>
						<checkModificationExclude>uns-analizer-env.properties</checkModificationExclude>
					</checkModificationExcludes>
-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<sourceExcludes>
					    <sourceExclude>**/.git/**</sourceExclude>
					</sourceExcludes>
<!--
				  <sourceIncludes>
				    <sourceInclude>**/*.myExtension</sourceInclude>
				  </sourceIncludes>

					<projectNameTemplate>lobo01-1.0.0</projectNameTemplate>
-->				
				      <wtpmanifest>true</wtpmanifest>
				      <wtpapplicationxml>true</wtpapplicationxml>
				      <wtpversion>2.0</wtpversion>
				      <manifest>${basedir}/src/main/resources/META-INF/MANIFEST.MF</manifest>
				</configuration>
			</plugin>
			<plugin>
			  <groupId>org.apache.tomcat.maven</groupId>
			  <artifactId>tomcat7-maven-plugin</artifactId>
			  <version>2.2</version>
			</plugin>
		</plugins>
	</build>
	<profiles>
	  <profile>
	    <id>dev</id>
	    <activation>
	      <activeByDefault>true</activeByDefault>
	      <property>
		<name>env</name>
		<value>dev</value>
              </property>
	    </activation>
	  </profile>
	  <profile>
	    <id>prod</id>
	    <activation>
	      <property>
		<name>env</name>
		<value>prod</value>
              </property>
	    </activation>
	  </profile>
	</profiles>

</project>
